<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Happy First</string>
    <string name="todo">TODO</string>
    <string name="enter_name">ENTER NAME</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>

    <string name="category">CATEGORY</string>
    <string name="submit">SUBMIT</string>

    <string name="user">ENTER USER</string>
    <string name="password">ENTER PASSWORD</string>
    <string name="signin">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="i_have_an_acount">I HAVE AN ACOUNT</string>
    <string name="welcome_to_happy_first">Welcome To Happy First!</string>
    <string name="i_am_guest">I AM GUEST</string>
    <string name="enter_surname">ENTER SURNAME</string>
    <string name="general_tips">GENERAL TIPS</string>
    <string name="going_tips">SPECIFIC TIPS</string>
    <string name="errname">ENTER NAME</string>
    <string name="errsurname">ENTER SURNAME</string>
    <string name="manage">VIEW STUDENTS</string>
    <string name="guest">Guest</string>
    <string name="bday">When is your birthday ?</string>
    <string name="cycle">Has your cycle started</string>
    <string name="orphan">Are you an orphan ?</string>


</resources>
