<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".RegisterActivity">


    <ImageView
        android:id="@+id/icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_logofinal___copy" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/bday"
            android:textColor="@color/dark_Blue"
            android:layout_below="@id/icon"/>

    <DatePicker
        android:id="@+id/datePicker1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_above="@+id/submit_btn"/>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@color/dark_Blue"
        android:padding="18dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"/>


</RelativeLayout>