<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:background="@color/dark_Blue"
    android:layout_height="match_parent"
    tools:context=".GuestActivity">

    <TextView
        android:id="@+id/tigs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily=""
        android:text="Welcome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="58sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily=""
        android:text="@string/guest"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tigs" />

    <Button
        android:id="@+id/view_general"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/orange"
        android:text="@string/general_tips"
        android:textColor="@color/dark_Blue"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <Button
        android:id="@+id/view_going"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/orange"
        android:text="@string/going_tips"
        android:textColor="@color/dark_Blue"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_general" />

    <Button
        android:id="@+id/view_manage"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/orange"
        android:text="@string/manage"
        android:textColor="@color/dark_Blue"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_going" />


    <Button
        android:id="@+id/view_manage_children"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/orange"
        android:text="Manage Children"
        android:textColor="@color/dark_Blue"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_manage" />

    <Button
        android:id="@+id/self_asses"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/orange"
        android:text="Self Assess"
        android:textColor="@color/dark_Blue"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_manage" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ask_for_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="40dp"
        android:padding="5dp"
        android:src="@drawable/sos"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


    <ImageView
        android:id="@+id/icon"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/todo"
        android:paddingTop="80dp"
        android:layout_marginTop="140dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_all_we_have_is_a_happy_period"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_manage" />

</androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>