<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_logofinal___copy"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
        app:layout_constraintDimensionRatio="w,16:9"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_top" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="98dp" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="@drawable/drawable_blue"
        android:padding="16dp"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/icon"
        android:inputType="text"
        android:hint="@string/enter_name"
        android:textColorHint="@color/dark_Blue"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/surname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_blue"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:textColorHint="@color/dark_Blue"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        android:inputType="text"
        android:hint="@string/enter_surname"
        android:autofillHints="" />
    <EditText
        android:id="@+id/pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_blue"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/dark_Blue"
        android:padding="16dp"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/surname"
        android:inputType="textVisiblePassword"
        android:hint="@string/password"
        android:autofillHints="" />


    <Spinner
        android:id="@+id/role"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/drawable_blue"
        android:padding="16dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/pass" />

    <Spinner
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/drawable_blue"
        android:padding="16dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/role" />


    <Button
        android:id="@+id/submit_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/drawable_blue_yellow"
        android:padding="18dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/dark_Blue"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/gender" />


</androidx.constraintlayout.widget.ConstraintLayout>